ov-wag/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: ov-wag
  name: ov-wag

spec:
  selector:
    matchLabels:
      app: ov-wag

  template:
    metadata:
      labels:
        app: ov-wag

    spec:
      containers:
        - image: ghcr.io/wgbh-mla/ov-wag:main
          imagePullPolicy: Always
          name: ov-wag
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 10Mi
          ports:
            - containerPort: 8000
              name: http
          startupProbe:
            httpGet:
              path: /api/v2/exhibits/
              port: http
            failureThreshold: 20
            periodSeconds: 3
          livenessProbe:
              httpGet:
                path: /api/v2/exhibits/
                port: http
              failureThreshold: 3
              periodSeconds: 30
