ov-wag/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ov-wag
spec:
  selector:
    app: ov-wag
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8000
